<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/main_driver_function_fragment">

    <ImageView
        android:id="@+id/driver_index_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/homepage"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/driver_index_img">-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="任务管理"-->
            <!--android:layout_marginLeft="@dimen/dp_x30"-->
            <!--android:textFontWeight="blod"-->
            <!--android:textSize="18sp"/>-->
    <!--</LinearLayout>-->
    <View
        style="@style/lightGray_LineView"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:id="@+id/driver_order_list">
            <ImageView
                style="@style/center_item_ImageView"
                android:background="@drawable/icon_user"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_block1"
                android:textSize="15sp" />
        </LinearLayout>
        <View
            style="@style/lightGray_vertical_LineView"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical"
            android:id="@+id/driver_get_order">
            <ImageView
                style="@style/center_item_ImageView"
                android:background="@drawable/icon_user"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_block2"
                android:textSize="15sp" />
        </LinearLayout>
        <View
            style="@style/lightGray_vertical_LineView"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical"
            android:id="@+id/driver_finish_order">
            <ImageView
                style="@style/center_item_ImageView"
                android:background="@drawable/icon_user"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_block3"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/dp_x30">-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="其他"-->
            <!--android:layout_marginLeft="@dimen/dp_x30"-->
            <!--android:textFontWeight="blod"-->
            <!--android:textSize="18sp"/>-->
    <!--</LinearLayout>-->
    <View
        style="@style/lightGray_LineView"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical"
            android:id="@+id/driver_manage_list">
            <ImageView
                style="@style/center_item_ImageView"
                android:background="@drawable/icon_user"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_block4"
                android:textSize="15sp" />
        </LinearLayout>
        <View
            style="@style/lightGray_vertical_LineView"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical"
            android:id="@+id/driver_manager_change">
            <ImageView
                style="@style/center_item_ImageView"
                android:background="@drawable/icon_user"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_block5"
                android:textSize="15sp" />
        </LinearLayout>
        <View
            style="@style/lightGray_vertical_LineView"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
    </LinearLayout>
    <View
        style="@style/lightGray_LineView"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
</LinearLayout>
